--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "homepage": "https://github.com/genefever/bingle#readme",
   "devDependencies": {
+    "@material-ui/core": "^4.12.3",
     "@types/chrome": "^0.0.162",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.5.0",
+    "fontsource-roboto": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
