--- a/server/package.json
+++ b/server/package.json
@@ -21,5 +21,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "@mui/icons-material": "^5.1.0"
   }
 }
