--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/genefever/bingle#readme",
   "devDependencies": {
-    "@material-ui/core": "^4.12.3",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.1.0",
+    "@mui/material": "^5.1.0",
     "@types/chrome": "^0.0.162",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
