--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "python-shell": "^3.0.1"
   },
   "devDependencies": {
     "@mui/icons-material": "^5.1.0"
